--- a/Blog.html
+++ b/Blog.html
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Pagina de vendas</h1>
-    <h2>REFRIGERANTE</h2>
-    <h2>COMIDAS</h2>
+    <h1>BLOG PESSOAL</h1>
 </body>
 </html>
