--- a/LeisDoBrasil.html
+++ b/LeisDoBrasil.html
@@ -2,7 +2,8 @@
 <html lang="en">
 
 <body>
-    <h1>Leis do Brasil</h1>
+    <h1>Leis do Brasil e seus estados</h1>
     <h2>Caracteristicas principais</h2>
+    
 </body>
 </html>
